@@ -277,6 +277,48 @@ def test_choice_with_sequence():
     assert_nodes_equal(expected, node)
 
 
+def test_choice_with_sequence_once():
+    node = load_xml("""
+        <?xml version="1.0"?>
+        <xsd:schema
+                xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+                xmlns:tns="http://tests.python-zeep.org/"
+                elementFormDefault="qualified"
+                targetNamespace="http://tests.python-zeep.org/">
+          <xsd:element name="container">
+            <xsd:complexType xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+              <xsd:sequence>
+                <xsd:element name="item_0" type="xsd:string"/>
+                <xsd:choice>
+                  <xsd:sequence>
+                      <xsd:element name="item_1" type="xsd:string"/>
+                      <xsd:element name="item_2" type="xsd:string"/>
+                  </xsd:sequence>
+                </xsd:choice>
+              </xsd:sequence>
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:schema>
+    """)
+    schema = xsd.Schema(node)
+    element = schema.get_element('ns0:container')
+    assert element.type.signature() == 'item_0: xsd:string, ({item_1: xsd:string, item_2: xsd:string})'
+    value = element(item_0='nul', item_1='foo', item_2='bar')
+
+    expected = """
+      <document>
+        <ns0:container xmlns:ns0="http://tests.python-zeep.org/">
+          <ns0:item_0>nul</ns0:item_0>
+          <ns0:item_1>foo</ns0:item_1>
+          <ns0:item_2>bar</ns0:item_2>
+        </ns0:container>
+      </document>
+    """
+    node = etree.Element('document')
+    element.render(node, value)
+    assert_nodes_equal(expected, node)
+
+
 def test_choice_with_sequence_second():
     node = load_xml("""
         <?xml version="1.0"?>
